# portfolio-htmx-axum

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  blog_ideas.md  build.sh  compose.yaml  data.json  package-lock.json  package.json  portfolio.json  run.sh  tailwind.config.js
assets/: blog.css  logo.html  main.css  prism.css  prism.js  site.webmanifest
data/: blog.json  portfolio.json
data/content/: building_my_blog_with_htmx_and_axum.html
scripts/: Cargo.toml  deploy.sh  run.sh  snake_case_converter.py
scripts/src/: main.rs
src/: blog.rs  blog_dir.rs  blog_entry.rs  main.rs  portfolio.rs  utils.rs
styles/: base.scss  final.css  final.css.map
templates/components/blog/: entry.html  footer.html
templates/components/blog_dir/: entry.html
templates/components/blog_entry/: footer.html
templates/components/portfolio/: page.html  title.html
templates/layouts/: base.html
templates/pages/: blog_dir.html  blog_entry.html  click.html  hello.html  home.html  portfolio.html  sync.html
templates/pages/blog/: blog_dir.html  haax_this_site.html
